--- a/chat_project/chat_app/templates/login.html
+++ b/chat_project/chat_app/templates/login.html
@@ -1,9 +1,10 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
 
@@ -11,17 +12,14 @@
     <div class="card">
         <h2>Welcome Back 👋</h2>
 
-        <form>
-            <input 
-                type="tel" 
-                placeholder="Phone Number" 
-                pattern="[0-9]{10}" 
-                required
-                  >
+        <form method="POST" action="{% url 'login' %}">
+            {% csrf_token %}
+            <input type="email" name="email" placeholder="Email Address" required>
 
             <input 
                 type="password" 
                 placeholder="Password" 
+                name="password"
                 required
                   >
 
