left section chat

--- a/chat_project/chat_app/templates/chat.html
+++ b/chat_project/chat_app/templates/chat.html
@@ -22,6 +22,8 @@
 
             <div class="popup-menu" id="leftPopup">
                 <div>Block list</div>
+                <div>Edit Profile</div>
+                <div>Logout</div>
             </div>
         </div>
 
