--- a/chat_project/chat_app/templates/signup.html
+++ b/chat_project/chat_app/templates/signup.html
@@ -38,7 +38,7 @@
 
         <p class="switch">
             Already have an account?
-            <a href="login.html">Login</a>
+            <a href="{% url 'login' %}">Login</a>
         </p>
     </div>
 </div>
